--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8889
 
+## database
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:mysql://localhost:3306/cocodmarket?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=yjy^^46232891
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+## logging
+logging.level.org.hibernate.sql=debug
+
+spring.thymeleaf.cache=false
